--- a/index.css
+++ b/index.css
@@ -26,17 +26,29 @@ img.map {
   background: #ccc;
 }
 
-.log {
+.log .dialog {
   position: fixed;
   padding: 20px;
-  top: 20;
-  bottom: 20;
-  left: 20;
-  right: 20;
+  top: 40px;
+  left: 40px;
+  right: 40px;
   z-index: 20;
   background: #99d9e0;
   border-radius: 20px;
   border: 5px solid #c1c1c1;
+}
+
+.log .overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 15;
+}
+
+.log.hidden {
+  display: none;
 }
 
 .log h3 {
@@ -66,6 +78,14 @@ img.map {
 
 .row input[type="text"] {
   margin-left: 10px;
+}
+
+.row input[type="text"].difficulty {
+  width: 40px;
+  margin-left: 2px;
+  text-align: center;
+  padding-top: 7px;
+  font-size: 15px;
 }
 
 .row input[type="submit"] {
