--- a/index.css
+++ b/index.css
@@ -62,6 +62,10 @@ button.pastclimbs {
   z-index: 15;
 }
 
+.dialog, .dialog input {
+  font-size: 24px;
+}
+
 .log.hidden, .climbs.hidden {
   display: none;
 }
@@ -75,20 +79,21 @@ h2, h3 {
   flex-direction: row;
   align-items: center;
   width: 100%;
+  white-space: nowrap;
+}
+
+.labeledInput input {
+  flex-shrink: 1;
+  width: 120px;
 }
 
 .row {
   margin: 20px 0;
 }
 
-.log .row:first-of-type {
-  justify-content: space-between;
-  width: 60%;
-  min-width: 375px;
-}
-
-.log .row:first-of-type .labeledInput {
-  width: unset;
+.daterow {
+  display: flex;
+  justify-content: center;
 }
 
 .row input[type="text"] {
@@ -99,8 +104,6 @@ h2, h3 {
   width: 40px;
   margin-left: 2px;
   text-align: center;
-  padding-top: 7px;
-  font-size: 15px;
 }
 
 .row input[type="submit"] {
@@ -122,7 +125,7 @@ h2, h3 {
   border-radius: 5px;
 }
 
-input.notes {
+input.notes, input.companions {
   flex-grow: 1;
 }
 
